@@ -3702,4 +3702,8 @@
 	  but should be in arch/arm/src/stm32 where they can be used from any board.
 	* sched/work_thread.c: Fix backward conditional compilation.  This might
 	  has caused a memory leadk.  From Freddie Chopin.
+	* configs/<many>/Make.defs:  Fix typo -wstrict-prototypes should be
+	  -Wstrict-prototypes (From Denis Cariki).
+	* arch/arm/src/calapyso/calypso_keypad.c:  Add Calypso keypad driver.  From
+	  Denis Cariki.
 
